<resources>
    <string name="app_name">Cleanup</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--Authentication String-->
    <string name="tv_login">Login</string>
    <string name="tv_login_info">Let’s clean the beaches</string>
    <string name="til_email">Email Address</string>
    <string name="til_pass">Password</string>
    <string name="tv_sign_up_direction">Don’t have an account? </string>
    <string name="tv_register">Register</string>
    <string name="til_name">Full Name</string>
    <string name="tv_login_direction">Already have an account? </string>
    <string name="til_phone">Phone Number</string>
    <string name="til_confirm_pass">Confirm Password</string>
    <string name="btn_register">Register</string>
    <string name="tv_info_resend">Did not get any code?</string>
    <string name="tv_resend_code">Resend Code</string>
    <string name="btn_send">Send</string>

    <!--Message String-->
    <string name="text_empty">Please Fill this Field</string>
    <string name="text_email_invalid">Invalid Email Address</string>
    <string name="text_not_match">Password Not Match</string>
    <string name="google_place_api">AIzaSyBvv0zMFBrFpxbv_mk_Sw7KLZMTu9ZK7XU</string>
    <string name="title_activity_choose_report">ChooseReportActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>